# claude-usage

./: .env  .gitignore  .npmrc  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/: hooks.json
.cursor/chat-history/2026-02-15/: claude-llm-support-implementation.md  project-name-change-to-token-juice.md
.github/workflows/: claude-code-review.yml  claude.yml  release.yml
.storybook/: main.ts  preview-head.html  preview.ts
docs/: anthropic-oauth-pkce.md
docs/plans/: 2026-03-01-fix-oauth-token-refresh-plan.md  2026-03-01-refactor-split-lib-rs-into-modules-plan.md  2026-03-02-fix-tray-polling-moves-to-backend-plan.md
kde-widget/: install.sh
kde-widget/helpers/: Cargo.toml  token_juice_helper.py
kde-widget/helpers/src/: main.rs
kde-widget/package/: metadata.json
kde-widget/package/contents/ui/: main.qml  (+4 more)
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keychain.rs  lib.rs  main.rs  models.rs  oauth.rs  poller.rs  settings.rs  tray.rs  updater.rs  usage.rs
src/__mocks__/: tauri-api-core.ts  tauri-api-event.ts  tauri-api-window.ts  tauri-plugin-opener.ts
src/components/: SettingsView.stories.tsx  SettingsView.tsx  SetupView.stories.tsx  SetupView.tsx  SkeletonUsageView.stories.tsx  SkeletonUsageView.tsx  UpdateView.stories.tsx  UpdateView.tsx  UsageView.stories.tsx  UsageView.tsx
tools/update-server/: Cargo.toml  prepare.sh
tools/update-server/src/: main.rs
(+1 files in other folders)
