[package]
name = "token-juice-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "token-juice-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rookie = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6"

[profile.release]
strip = true
lto = true
opt-level = "z"
